syntax = "proto3";

package ch.ubique.notifyme.sdk.backend.model;
option java_package = "ch.ubique.notifyme.sdk.backend.model";

import "VenueType.proto";

message ProblematicDiaryEntryWrapper {
  int32 version = 1;
  repeated ProblematicDiaryEntry diaryEntries = 2;
}
message ProblematicDiaryEntry {
  string name = 1;
  string location = 2;
  string room = 3;
  VenueType venueType = 4;
  uint64 checkinTime = 5;
  uint64 checkOutTIme = 6;
}